force-app/main/default/objects/Explore_Plot_Cell__c/Explore_Plot_Cell__c.object-meta.xml
<CustomObject>
    <label>Explore Plot Cell</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Explore Plot Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Explore Plot Cells</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>