force-app/main/default/objects/Explore_Plot_Cell__c/fields/Check_Product__c.field-meta.xml
<CustomField>
    <fullName>Check_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Product</label>
    <type>Checkbox</type>
</CustomField>