force-app/main/default/objects/Explore_Plot_Cell__c/fields/Explore_Plot__c.field-meta.xml
<CustomField>
    <fullName>Explore_Plot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plot Location</description>
    <label>Explore Plot</label>
    <referenceTo>Plot_Location__c</referenceTo>
    <relationshipLabel>Explore Plot Cells</relationshipLabel>
    <relationshipName>Explore_Plot_Cells</relationshipName>
    <type>Lookup</type>
</CustomField>