force-app/main/default/objects/Explore_Plot_Cell__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>