force-app/main/default/objects/Explore_Plot_Cell__c/fields/GID_Number__c.field-meta.xml
<CustomField>
    <fullName>GID_Number__c</fullName>
    <formula>Variety__r.Nombre_de_Registro__c</formula>
    <label>GID Number</label>
    <type>Text</type>
</CustomField>