force-app/main/default/objects/Explore_Plot_Cell__c/fields/Numeric_QR__c.field-meta.xml
<CustomField>
    <fullName>Numeric_QR__c</fullName>
    <formula>VALUE(QR_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numeric QR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>