force-app/main/default/objects/Explore_Plot_Cell__c/fields/Plant_Date__c.field-meta.xml
<CustomField>
    <fullName>Plant_Date__c</fullName>
    <inlineHelpText>This is the Date that this Plot Cell was planted - Shown in GDM Explore</inlineHelpText>
    <label>Plant Date</label>
    <type>Date</type>
</CustomField>