force-app/main/default/objects/Explore_Plot_Cell__c/fields/Plot_Cell_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Plot_Cell_Test_Type__c</fullName>
    <label>Plot Cell Test Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>