force-app/main/default/objects/Explore_Plot_Cell__c/fields/Plot_Location_Long_Id__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location_Long_Id__c</fullName>
    <formula>Explore_Plot__r.Id_Largo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Location Long Id</label>
    <type>Text</type>
</CustomField>