force-app/main/default/objects/Explore_Plot_Cell__c/fields/Plot_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location_Name__c</fullName>
    <formula>Explore_Plot__r.Name + &quot;, &quot; + Explore_Plot__r.Location__r.State_Id__c</formula>
    <label>Plot Location Name</label>
    <type>Text</type>
</CustomField>