force-app/main/default/objects/Explore_Plot_Cell__c/fields/Plot_Trait__c.field-meta.xml
<CustomField>
    <fullName>Plot_Trait__c</fullName>
    <formula>TEXT(Variety__r.Tecnologia__c)</formula>
    <label>Plot Trait</label>
    <type>Text</type>
</CustomField>