force-app/main/default/objects/Explore_Plot_Cell__c/fields/QR__c.field-meta.xml
<CustomField>
    <fullName>QR__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;choe=UTF-8&amp;chl=&apos; &amp; QR_Code__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR</label>
    <type>Text</type>
</CustomField>