force-app/main/default/objects/Explore_Plot_Cell__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <inlineHelpText>This will identify the plot cell&apos;s Range/Row - Will be seen by Product Placement Accounts in the Header in GDM Explore</inlineHelpText>
    <label>Range</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>