force-app/main/default/objects/Explore_Plot_Cell__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <inlineHelpText>This will be used to identify the Plots Row. Will be seen by PRoduct Placement Accounts in GDM Explore.</inlineHelpText>
    <label>Row</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>