force-app/main/default/objects/Explore_Plot_Cell__c/fields/Row_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Row_Spacing__c</fullName>
    <inlineHelpText>This is the Row Spacing for this Plot Cell. Seen in GDM Explore. Do not add the &quot;</inlineHelpText>
    <label>Row Spacing</label>
    <length>5</length>
    <type>Text</type>
</CustomField>