force-app/main/default/objects/Explore_Plot_Cell__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>This field will determine the Plot Cells sequence using the prev and next buttons within GDM Explore</inlineHelpText>
    <label>Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>