force-app/main/default/objects/Explore_Plot_Cell__c/fields/Stand_Density__c.field-meta.xml
<CustomField>
    <fullName>Stand_Density__c</fullName>
    <inlineHelpText>This is the Stand Density for this Plot Cell - Used in GDM Explore - Seen in the Header</inlineHelpText>
    <label>Stand Density</label>
    <length>10</length>
    <type>Text</type>
</CustomField>