force-app/main/default/objects/Explore_Plot_Cell__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <formula>TEXT(Variety__r.Tecnologia__c)</formula>
    <label>Technology</label>
    <type>Text</type>
</CustomField>