force-app/main/default/objects/Explore_Plot_Cell__c/fields/Treat_Number__c.field-meta.xml
<CustomField>
    <fullName>Treat_Number__c</fullName>
    <label>Treat Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>