force-app/main/default/objects/Explore_Plot_Cell__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Explore Plot Cells</relationshipLabel>
    <relationshipName>Explore_Plot_Cells</relationshipName>
    <type>Lookup</type>
</CustomField>