force-app/main/default/objects/Explore_Plot_Cell__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QR_Code__c</columns>
    <columns>Explore_Plot__c</columns>
    <columns>Variety__c</columns>
    <columns>Sequence__c</columns>
    <columns>Range__c</columns>
    <columns>Row__c</columns>
    <columns>Plot_Cell_Test_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QR_Code__c</field>
        <operation>equals</operation>
        <value>1000026</value>
    </filters>
    <label>All</label>
</ListView>