force-app/main/default/objects/Explore_Plot_Cell__c/listViews/DeWitt_test.listView-meta.xml
<ListView>
    <fullName>DeWitt_test</fullName>
    <columns>NAME</columns>
    <columns>Range__c</columns>
    <columns>Row__c</columns>
    <columns>Sequence__c</columns>
    <columns>Plot_Location_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Explore_Plot__c</field>
        <operation>equals</operation>
    </filters>
    <label>Explore Plot Cells without Locs</label>
</ListView>